--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^5.5.5",
     "next": "12.0.7",
     "react": "17.0.2",
+    "react-csv": "^2.2.1",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
