--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.6.0",
     "framer-motion": "^5.5.5",
     "next": "12.0.7",
+    "node-fetch": "^2.6.6",
     "react": "17.0.2",
     "react-csv": "^2.2.1",
     "react-dom": "17.0.2"
