--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "framer-motion": "^5.5.5",
-    "next": "12.0.7",
+    "next": "^12.2.5",
     "node-fetch": "^2.6.6",
     "react": "17.0.2",
     "react-csv": "^2.2.1",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/node": "^18.7.4",
+    "@types/react": "^17.0.48",
+    "@types/react-csv": "^1.1.3",
     "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "typescript": "^4.7.4"
   }
 }
